# ApplejuiceCLI

./: .gitignore  Cargo.toml  README.md  RobloxStudioBeta.dxvk-cache  buildrun.sh  config.json  install.sh
.github/workflows/: rust.yml
src/: main.rs
src/args/: help.rs  initialise.rs  install.rs  launch.rs  mod.rs  opendata.rs  play.rs  purge.rs  purgecache.rs  sysinfo.rs
src/utils/: argparse.rs  args.rs  configuration.rs  installation.rs  installer.rs  mod.rs  notification.rs  proton.rs  rpc.rs  setup.rs  steamos.rs  terminal.rs
