[package]
name = "applejuicecli"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[dependencies]
discord-rich-presence = "0.2.3"
inotify = "0.10.2"
notify = "6.1.1"
notify-rust = "4.10.0"
progress_bar = "1.0.5"
reqwest = { version = "0.11.18", features = ["blocking"] }
sdl2 = "0.35.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.103"
urlencoding = "2.1.3"
